crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__while__fun_in_body.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/while/fun_in_body.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Expect expression.
   ╭─[craftinginterpreters/test/while/fun_in_body.lox:2:14]
   │
 2 │ while (true) fun foo() {}
   │              ───  
───╯
