crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__while__return_closure.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/while/return_closure.lox
---
success: true
exit_code: 0
----- stdout -----
i

----- stderr -----
