crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__while__syntax.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/while/syntax.lox
---
success: true
exit_code: 0
----- stdout -----
1
2
3
0
1
2

----- stderr -----
